Add endpount for /mma​/v1​/stammdaten​/chance​/getKaufabsicht
