# storage/api-docs/api-docs.json
@@ -98,6 +98,52 @@
                 }
             }
         },
+        "/mma/v1/stammdaten/chance/getKaufabsicht": {
+            "get": {
+                "tags": [
+                    "Canchen"
+                ],
+                "summary": "Ruft die Dokument Eigenschaften ab",
+                "operationId": "getKaufabsicht",
+                "parameters": [
+                    {
+                        "name": "oAuth2accessToken",
+                        "in": "query",
+                        "description": "",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "password"
+                        }
+                    },
+                    {
+                        "name": "erpFremdKeyList[]",
+                        "in": "query",
+                        "description": "",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            },
+                            "collectionFormat": "multi",
+                            "example": [
+                                "ErpFremdKey1"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Validation Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/proxess/v1/": {
             "get": {
                 "tags": [
